fixed layout issues
fixed layout issues due to changing HTML

--- a/portfolio-css/style.css
+++ b/portfolio-css/style.css
@@ -4,6 +4,19 @@ body{
     
 }
 
+
+
+#steveJobs{
+    margin-top: 50px;
+}
+
+#downArrow{
+    text-align: center;
+    margin-top: 90px;
+   }
+
+
+
 #nav-links{
     margin-left:auto;
 }
@@ -18,6 +31,7 @@ header{
     padding-bottom: 50px;  
     color: whitesmoke;
     text-shadow: 2px 2px black;
+    height: 95vh;
 }
 
 
@@ -56,4 +70,5 @@ hr{
 .navbar-inverse .navbar-nav .nav-link {
     color: mediumaquamarine;
 }
+
 
